--- a/ProjectManagement/src/main/resources/templates/createsubject.html
+++ b/ProjectManagement/src/main/resources/templates/createsubject.html
@@ -19,7 +19,6 @@
             font-family: Sunflower, sans-serif;
             background: linear-gradient(to right, #1F2863, #003b7a);
             color: #000000;
-            /* สีข้อความ */
         }
 
 
@@ -32,7 +31,6 @@
             width: 250px;
             height: 100vh;
             background-color: #fff;
-            /* สีขาว */
             position: fixed;
             left: 0;
             top: 0;
@@ -44,10 +42,8 @@
             padding: 50px;
         }
 
-        /* เพิ่มสไตล์เพื่อลิงก์ในเมนู */
         #sidebar a {
             color: #000;
-            /* สีข้อความลิงก์ */
             text-decoration: none;
             padding: 15px;
             display: block;
@@ -55,7 +51,6 @@
 
         #sidebar a:hover {
             background-color: #ddd;
-            /* สีเมื่อโฮเวอร์ */
         }
 
         .bg-primary {
@@ -102,7 +97,7 @@
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
-                    <a href="createsubject" class="nav-link link-dark" aria-current="page">
+                    <a href="homestaff" class="nav-link link-dark" aria-current="page">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-person-add" viewBox="0 0 16 16">
                             <path
@@ -114,7 +109,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/subject" class="nav-link link-dark">
+                    <a href="/createsubject" class="nav-link active">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-book-fill" viewBox="0 0 16 16">
                             <path
@@ -130,7 +125,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/importuserfile" class="nav-link active">
+                    <a href="/importuserfile" class="nav-link link-dark">
                         <img src="https://cdn3.iconfinder.com/data/icons/interaction-design/512/Import_B-512.png" alt=""
                             width="16" height="16">
                         Create New User
@@ -157,111 +152,55 @@
                 <div class="row">
                     <div class="col">
                         <div class="container-fulid my-3 p-3 bg-primary w-100 rounded">
-                            <p class="text-center" style="font-size: x-large; font-weight: bolder;">Import File To
-                                Create New User</p>
+                            <p class="text-center" style="font-size: x-large; font-weight: bolder;">All Subject</p>
+                            <div class="white-frame">
+                                <div class="header">
+                                </div>
+                                <div class="search" style="display: flex;">
+                                    <input type="text" class="form-control" style="margin-right: 10px;" placeholder="SubjectID">
+                                    <input type="text" class="form-control" style="margin-right: 10px;" placeholder="SubjectName">
+                                    <button class="btn btn-success">Search</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row mt-3">
-                    <div class="col">
-                        <div class="container-fluid d-flex flex-column justify-content-center align-items-center my-3 p-3 bg-primary rounded rectangBig"
-                            id="drop-area" ondrop="handleDrop(event)" ondragover="handleDragOver(event)"
-                            ondragleave="handleDragLeave(event)">
+<!-- FILEPATH: /c:/Users/Mayme/Downloads/OOP-20240108T134845Z-001/OOP/ProjectManagement/src/main/resources/templates/createsubject.html -->
 
-                            <div class="container py-5">
-                                <div class="row">
-                                    <div class="col-md-6 offset-md-3">
-                                        <form method="POST" action="/upload"
-                                            class="dropzone dz-clickable border rounded bg-light p-3">
-                                            <div class="dz-default dz-message text-center">
-                                                <img src="https://cdn3.iconfinder.com/data/icons/interaction-design/512/Import_B-512.png"
-                                                    alt="" class="mb-3" width="60px" height="60px">
-                                                <p class="text-center" style="font-size: x-large; font-weight: 500;">
-                                                    Drag and Drop here <br>or</p>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <input type="file" id="file-input" onchange="handleFileSelect()" style="display:none;">
-                        </div>
-                    </div>
+                <div style="width: 100%; height: 50vh; background-color: white;border-radius: 10px;">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr class="bg-light"> 
+                                <!-- Change "studentId" to "username" and update other column names accordingly -->
+                                <th>Subject ID</th>
+                                <th>Subject Name</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody class="bg-white">
+                            <tr th:each="user : ${users}">
+                                <!-- Use correct attribute names from "useraccount" collection -->
+                                <td th:text="${user['username']}"></td>
+                                <td th:text="${user['firstName']}"></td>
+                                <td th:text="${user['lastName']}"></td>
+                                <td>
+                                    <button type="button" class="btn btn-danger"
+                                            data-bs-toggle="modal"
+                                            data-bs-target="#deleteUserModal"
+                                            onclick="setUsernameForDeleteUserModal(`${user['username']}`)">
+                                        Delete
+                                    </button>
+                                </td>
+                            </tr>
+                            <!-- Add more rows here -->
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
-    <script>
-        Dropzone.autoDiscover = false;
-        var myDropzone = new Dropzone(".dropzone", {
-            url: "/upload",
-            paramName: "file",
-            maxFilesize: 2, // MB
-            maxFiles: 10,
-            acceptedFiles: 'image/*',
-            dictDefaultMessage: "Drag files here or click to upload.",
-            clickable: true,
-            acceptedFiles: ".csv",
-            init: function() {
-                this.on("sending", function(file, xhr, formData) {
-                    if (confirm("Are you sure you want to upload this file?")) {
-                        // Proceed with the upload
-                    } else {
-                        // Cancel the upload
-                        this.removeFile(file);
-                    }
-                });
-            }
-        });
-        // Dropzone configuration
-        //add confrim dialog
-
-    </script>
-    <script>
-        function handleDrop(event) {
-            event.preventDefault();
-            var files = event.dataTransfer.files;
-            handleFiles(files);
-        }
-
-        function handleDragOver(event) {
-            event.preventDefault();
-            document.getElementById("drop-area").classList.add("dragover");
-        }
-
-        function handleDragLeave(event) {
-            event.preventDefault();
-            document.getElementById("drop-area").classList.remove("dragover");
-        }
-
-        function handleFileSelect() {
-            var files = document.getElementById("file-input").files;
-            handleFiles(files);
-        }
-
-        function handleFiles(files) {
-            document.getElementById("drop-area").classList.remove("dragover");
-
-            for (var i = 0; i < files.length; i++) {
-                var file = files[i];
-                console.log("Received file: " + file.name);
-
-                // Perform actions with the file here, such as uploading to a server
-            }
-        }
-
-        function selectFile() {
-            document.getElementById("file-input").click();
-        }
-        $('.file-upload').file_upload();
-    </script>
-
+    
 </body>
 
 </html>
