--- a/ProjectManagement/src/main/resources/templates/createsubject.html
+++ b/ProjectManagement/src/main/resources/templates/createsubject.html
@@ -2,15 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/dropzone@5/dist/min/dropzone.min.css" />
-    <script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js"></script>
+    <script src="jquery-3.7.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
     <title>Import File To Create New User</title>
     <style>
         body {
@@ -90,7 +93,9 @@
                     <a href="homestaff" class="d-flex align-items-center link-dark text-decoration-none ">
                         <img src="https://cdn-icons-png.flaticon.com/512/3884/3884871.png" alt="" width="40" height="40"
                             class="rounded-circle me-2">
-                            <strong> STAFF <br> <div th:text="${firstname} + ' ' + ${lastname}"> </div></strong>
+                        <strong> STAFF <br>
+                            <div th:text="${firstname} + ' ' + ${lastname}"> </div>
+                        </strong>
                     </a>
                 </div>
             </div>
@@ -120,7 +125,8 @@
                 </li>
                 <li>
                     <a href="/importsubjectfile" class="nav-link link-dark">
-                        <img src="https://cdn3.iconfinder.com/data/icons/interaction-design/512/Import_B-512.png" alt="" width="16" height="16">
+                        <img src="https://cdn3.iconfinder.com/data/icons/interaction-design/512/Import_B-512.png" alt=""
+                            width="16" height="16">
                         Create New Subject
                     </a>
                 </li>
@@ -157,50 +163,90 @@
                                 <div class="header">
                                 </div>
                                 <div class="search" style="display: flex;">
-                                    <input type="text" class="form-control" style="margin-right: 10px;" placeholder="SubjectID">
-                                    <input type="text" class="form-control" style="margin-right: 10px;" placeholder="SubjectName">
+                                    <input type="text" class="form-control" style="margin-right: 10px;"
+                                        placeholder="SubjectID">
+                                    <input type="text" class="form-control" style="margin-right: 10px;"
+                                        placeholder="SubjectName">
                                     <button class="btn btn-success">Search</button>
+                                </div>
+                            </div>
+                            <div class="add-user mt-3">
+                                <button class="btn btn-primary" data-bs-toggle="modal"
+                                    data-bs-target="#addSubjectModal">Add Subject</button>
+                            </div>
+                            <!-- Add Subject Modal -->
+                            <div class="modal fade" id="addSubjectModal" tabindex="-1"
+                                aria-labelledby="addSubjectModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="addSubjectModalLabel">Add Subject</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <form th:action="@{/addsubject}" method="post">
+                                            <div class="modal-body">
+                                                <div class="mb-3">
+                                                    <label for="subjectID" class="form-label">Subject ID</label>
+                                                    <input type="text" class="form-control" id="subjectID"
+                                                        placeholder="Enter subject ID">
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="subjectName" class="form-label">Subject Name</label>
+                                                    <input type="text" class="form-control" id="subjectName"
+                                                        placeholder="Enter subject name">
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary"
+                                                        data-bs-dismiss="modal">Close</button>
+                                                    <button type="submit" class="btn btn-primary">Save</button>
+                                                </div>
+                                                <!-- Add subject form -->
+
+                                        </form>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-<!-- FILEPATH: /c:/Users/Mayme/Downloads/OOP-20240108T134845Z-001/OOP/ProjectManagement/src/main/resources/templates/createsubject.html -->
+            </div>
+            <!-- FILEPATH: /c:/Users/Mayme/Downloads/OOP-20240108T134845Z-001/OOP/ProjectManagement/src/main/resources/templates/createsubject.html -->
 
-                <div style="width: 100%; height: 50vh; background-color: white;border-radius: 10px;">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr class="bg-light"> 
-                                <!-- Change "studentId" to "username" and update other column names accordingly -->
-                                <th>Subject ID</th>
-                                <th>Subject Name</th>
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody class="bg-white">
-                            <tr th:each="user : ${users}">
-                                <!-- Use correct attribute names from "useraccount" collection -->
-                                <td th:text="${user['subjectID']}"></td>
-                                <td th:text="${user['subjectName']}"></td>
-                           
-                                <td>
-                                    <button type="button" class="btn btn-danger"
-                                            data-bs-toggle="modal"
-                                            data-bs-target="#deleteUserModal"
-                                            onclick="setUsernameForDeleteUserModal(`${user['username']}`)">
-                                        Delete
-                                    </button>
-                                </td>
-                            </tr>
-                            <!-- Add more rows here -->
-                        </tbody>
-                    </table>
-                </div>
+            <div style="width: 100%; height: 50vh; background-color: white;border-radius: 10px;">
+                <table class="table table-striped">
+                    <thead>
+                        <tr class="bg-light">
+                            <!-- Change "studentId" to "username" and update other column names accordingly -->
+                            <th>Subject ID</th>
+                            <th>Subject Name</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody class="bg-white">
+                        <tr th:each="user : ${users}">
+                            <!-- Use correct attribute names from "useraccount" collection -->
+                            <td th:text="${user['subjectID']}"></td>
+                            <td th:text="${user['subjectName']}"></td>
+
+                            <td>
+                                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                    data-bs-target="#deleteUserModal"
+                                    onclick="setUsernameForDeleteUserModal(`${user['username']}`)">
+                                    Delete
+                                </button>
+                            </td>
+                        </tr>
+                        <!-- Add more rows here -->
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
+    </div>
 
-    
+
 </body>
 
 </html>
